--- a/gallery/templates/images/homepage.html
+++ b/gallery/templates/images/homepage.html
@@ -5,11 +5,11 @@
 
 <div class="container">
 
-    <h1 style="text-align:center; color:#0d47a1" class="display-3">View the World in Awesome Mzalendo Gallery</h1>
+    <h1 style="text-align:center; color: maroon" class="display-4">Awesome Mzalendo Gallery</h1>
 
     {% for category in categories %}
 
-    <a href="/?category={{category.id}}"> <button class="btn btn-lg btn-link">      #{{category.name}}</button></a>
+    <a href="/?category={{category.id}}"> <button class="btn btn-lg btn-link"> #{{category.name}}</button></a>
 
           {% endfor %}
 
