--- a/gallery/templates/images/base.html
+++ b/gallery/templates/images/base.html
@@ -4,8 +4,8 @@
 <html>
 <head>
 
-<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC&display=swap" rel="stylesheet">
 
   <meta charset="utf-8">
 
