--- a/gallery/templates/images/homepage.html
+++ b/gallery/templates/images/homepage.html
@@ -61,6 +61,130 @@
       {% endfor %}
 
   </div>
+  <div>
+    <footer class="page-footer font-small mdb-color lighten-3 pt-4">
+
+      <!-- Footer Links -->
+      <div class="container text-center text-md-left">
+    
+        <!-- Grid row -->
+        <div class="row">
+    
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
+    
+            <!-- Content -->
+            <h5 class="font-weight-bold text-uppercase mb-4">Footer Content</h5>
+            <p>We offer the best, most comprehensive online gallery guides for major art cities and every state, as well as European art centers. Visitors are provided with an up-to-date, reliable source of information about current exhibitions as well as a wide variety of art collecting topics and interests.</p>
+    
+          </div>
+          <!-- Grid column -->
+    
+          <hr class="clearfix w-100 d-md-none">
+    
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 mx-auto my-md-4 my-0 mt-4 mb-1">
+    
+            <!-- Links -->
+            <h5 class="font-weight-bold text-uppercase mb-4">About</h5>
+    
+            <ul class="list-unstyled">
+              <li>
+                <p>
+                  <a href="#!">PROJECTS</a>
+                </p>
+              </li>
+              <li>
+                <p>
+                  <a href="#!">ABOUT US</a>
+                </p>
+              </li>
+              <li>
+                <p>
+                  <a href="#!">BLOG</a>
+                </p>
+              </li>
+              <li>
+                <p>
+                  <a href="#!">AWARDS</a>
+                </p>
+              </li>
+            </ul>
+    
+          </div>
+          <!-- Grid column -->
+    
+          <hr class="clearfix w-100 d-md-none">
+    
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
+    
+            <!-- Contact details -->
+            <h5 class="font-weight-bold text-uppercase mb-4">Address</h5>
+    
+            <ul class="list-unstyled">
+                <li>
+                    <p>
+                      <i class="fas fa-home mr-3"></i> Nairobi, Moringa School-Ngong Lane Plaza, Kenya</p>
+                  </li>
+                  <li>
+                    <p>
+                      <i class="fas fa-envelope mr-3"></i> smzalendo31@gmail.com.com</p>
+                  </li>
+                  <li>
+                    <p>
+                      <i class="fas fa-phone mr-3"></i> + 254 792 228 683</p>
+                  </li>
+                  <li>
+                    <p>
+                      <i class="fas fa-print mr-3"></i> + 254 713 519 553</p>
+                  </li>
+                </ul>
+              </div>
+              <!-- Grid column -->
+        
+              <hr class="clearfix w-100 d-md-none">
+        
+              <!-- Grid column -->
+              <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
+        
+                <!-- Social buttons -->
+                <h5 class="font-weight-bold text-uppercase mb-4">Follow Us</h5>
+        
+                <!-- Facebook -->
+                <a type="button" class="btn-floating btn-fb">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <!-- Twitter -->
+                <a type="button" class="btn-floating btn-tw">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <!-- Google +-->
+                <a type="button" class="btn-floating btn-gplus">
+                  <i class="fab fa-google-plus-g"></i>
+                </a>
+                <!-- Dribbble -->
+                <a type="button" class="btn-floating btn-dribbble">
+                  <i class="fab fa-dribbble"></i>
+                </a>
+        
+              </div>
+              <!-- Grid column -->
+        
+            </div>
+            <!-- Grid row -->
+        
+          </div>
+          <!-- Footer Links -->
+        
+          <!-- Copyright -->
+          <div class="footer-copyright text-center py-3">© 2018 Copyright:
+            <a href="https://mdbootstrap.com/education/bootstrap/"> Steve Mwanza</a>
+          </div>
+          <!-- Copyright -->
+        
+        </footer>
+  </div>
 
 <script>
     function copytext(text) {
