--- a/gallery/templates/images/homepage.html
+++ b/gallery/templates/images/homepage.html
@@ -62,10 +62,10 @@
 
   </div>
   <div>
-    <footer class="page-footer font-small mdb-color lighten-3 pt-4">
+    <footer class="page-footer footer-expand-lg font-small mdb-color lighten-3 pt-4">
 
       <!-- Footer Links -->
-      <div class="container text-center text-md-left">
+      <div class="container text-center text-md-left bg-secondary">
     
         <!-- Grid row -->
         <div class="row">
@@ -74,7 +74,7 @@
           <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
     
             <!-- Content -->
-            <h5 class="font-weight-bold text-uppercase mb-4">Footer Content</h5>
+            <h5 class="font-weight-bold text-uppercase mb-4">MZALENDO GALLA</h5>
             <p>We offer the best, most comprehensive online gallery guides for major art cities and every state, as well as European art centers. Visitors are provided with an up-to-date, reliable source of information about current exhibitions as well as a wide variety of art collecting topics and interests.</p>
     
           </div>
@@ -178,8 +178,8 @@
           <!-- Footer Links -->
         
           <!-- Copyright -->
-          <div class="footer-copyright text-center py-3">© 2018 Copyright:
-            <a href="https://mdbootstrap.com/education/bootstrap/"> Steve Mwanza</a>
+          <div class="footer-copyright text-center py-3">© 2019 Copyright:
+            <a href=""> Steve Mwanza</a>
           </div>
           <!-- Copyright -->
         
